# envsync

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  test.sh
.github/workflows/: release.yml
common/: Cargo.toml
common/src/: lib.rs  rpc.rs
src/: commands.rs  constants.rs  crypto.rs  delete.rs  execute.rs  get.rs  list.rs  main.rs  protocol.rs  serve.rs  set.rs  utils.rs
syncenv-cli/: Cargo.toml
syncenv-cli/src/: main.rs
syncenvd/: Cargo.toml
syncenvd/src/: database.rs  main.rs  sync.rs
