[package]
name = "envsync-cli"
version = "0.1.0"
edition = "2024"
description = "Synchronize environment variables across machines using Automerge and iroh networking."
license = "MIT"
readme = "README.md"
repository = "https://github.com/GomesGoncalo/envsync"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.102"
automerge = "0.8"
clap = { version = "4.6.1", features = ["derive", "env"] }
iroh = "0.98"
postcard = "1.1.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.0", features = ["full"] }
n0-error = "0.1"
dirs-next = "2.0"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rpassword = "7.4"
zeroize = "1.8"
getrandom = "0.4"
