[package]
name = "syncenvd"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
iroh = "0.98"
iroh-docs = "0.98"
iroh-blobs = "0.100"
iroh-gossip = "0.98"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures-util = "0.3"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tarpc = { version = "0.37", features = ["full", "tokio1"] }
tracing = "0.1.44"
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }
